@@ -29,9 +29,7 @@ public class KafkaProducerExample {
     public static void main(String[] args) {
         // Build the configuration map first using a mutable map
         Map<String, Object> mutableProps = new java.util.HashMap<>();
-//        mutableProps.put(ProducerConfig.BOOTSTRAP_SERVERS_CONFIG, DEFAULT_BOOTSTRAP_SERVERS);
-         mutableProps.put(ProducerConfig.BOOTSTRAP_SERVERS_CONFIG, Arrays.asList(DEFAULT_BOOTSTRAP_SERVERS));
-//        mutableProps.put(ProducerConfig.BOOTSTRAP_SERVERS_CONFIG, List.of(DEFAULT_BOOTSTRAP_SERVERS));
+        mutableProps.put(ProducerConfig.BOOTSTRAP_SERVERS_CONFIG, Arrays.asList(DEFAULT_BOOTSTRAP_SERVERS));
         mutableProps.put(ProducerConfig.CLIENT_ID_CONFIG, CLIENT_ID);
         mutableProps.put(ProducerConfig.KEY_SERIALIZER_CLASS_CONFIG, StringSerializer.class.getName());
         mutableProps.put(ProducerConfig.VALUE_SERIALIZER_CLASS_CONFIG, StringSerializer.class.getName());
@@ -41,13 +39,13 @@ public class KafkaProducerExample {
         mutableProps.put(ProducerConfig.CLIENT_DNS_LOOKUP_CONFIG, "use_all_dns_ips");
 
         // Wrap the map to make it immutable – simulates a user supplying an unmodifiable configuration object
-         Map<String, Object> props = java.util.Collections.unmodifiableMap(mutableProps);
+        // Map<String, Object> props = java.util.Collections.unmodifiableMap(mutableProps);
 
         // Pass the immutable map directly to the KafkaProducer constructor
         Producer<String, String> producer = new KafkaProducer<String, String>(mutableProps);
 
         mutableProps.put(ProducerConfig.CLIENT_ID_CONFIG, CLIENT_ID+"1");
-        Producer<String, String> producer1 = new KafkaProducer<String, String>(mutableProps);
+       Producer<String, String> producer1 = new KafkaProducer<String, String>(mutableProps);
         long recordCount = 50; // Number of messages to send
         try {
             while (true) {
@@ -57,7 +55,7 @@ public class KafkaProducerExample {
                     String messageValue = MESSAGE_VALUE + "-" + i + "-" + System.currentTimeMillis();
                     producer.send(new ProducerRecord<>(TOPIC_NAME, messageKey, messageValue));
                     producer.send(new ProducerRecord<>(TOPIC_NAME+"1", messageKey, messageValue));
-                    producer1.send(new ProducerRecord<>(TOPIC_NAME+"1", messageKey, messageValue));
+                   producer1.send(new ProducerRecord<>(TOPIC_NAME+"1", messageKey, messageValue));
                 }
 
                 producer.flush();
@@ -67,6 +65,7 @@ public class KafkaProducerExample {
             logger.error("Error sending message", e);
         } finally {
             producer.close();
+            producer1.close();
         }
     }
 
